--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styly.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <title>Piškvorky</title>
   </head>
   <body>
-    <h1>Piškvorky</h1>
+    <div class="container">
+      <div class="background-dark-blue">
+        <img class="img" src="uvodni.jpg" alt="Piškvorky v podobě čtyřlístků" />
+      </div>
+      <div class="background-dark-blue">
+        <h1 class="title">Piškvorky</h1>
+        <p class="text">
+          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+          čtverečkovaný papír. Přejeme vám hodně zábavy!
+        </p>
+      </div>
+      <div>
+        <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/">Pravidla</a>
+        <a href="index.html">Začít hrát</a>
+      </div>
+    </div>
   </body>
 </html>
