Přidány třídy k tlačítkům, úprava vzhledu tlačítek

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
           čtverečkovaný papír. Přejeme vám hodně zábavy!
         </p>
       </div>
-      <div>
-        <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/">Pravidla</a>
-        <a href="index.html">Začít hrát</a>
+      <div class="buttons">
+        <a
+          href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
+          class="btn btn-first"
+          >Pravidla</a
+        >
+        <a href="index.html" class="btn btn-second">Začít hrát</a>
       </div>
     </div>
   </body>
