Přidán link na změnu font-family, úprava stylů

--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
       rel="stylesheet"
     />
+    <!-- změna font-family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Adlam:wght@400..700&family=Noto+Sans+Khojki&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Piškvorky</title>
   </head>
   <body>
     <div class="container">
-      <div class="background-dark-blue">
+      <div class="background-dark-blue border-radius">
         <img class="img" src="uvodni.jpg" alt="Piškvorky v podobě čtyřlístků" />
       </div>
       <div class="background-dark-blue">
