--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
   <body>
     <div class="container">
       <div class="background-dark-blue border-radius">
-        <img class="img" src="uvodni.jpg" alt="Piškvorky v podobě čtyřlístků" />
+        <img
+          class="img-responsive"
+          src="uvodni.jpg"
+          alt="Piškvorky v podobě čtyřlístků"
+        />
       </div>
       <div class="background-dark-blue">
         <h1 class="title">Piškvorky</h1>
@@ -37,10 +41,10 @@
       <div class="buttons">
         <a
           href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
-          class="btn btn-first"
+          class="btn btn-rules"
           >Pravidla</a
         >
-        <a href="index.html" class="btn btn-second">Začít hrát</a>
+        <a href="index.html" class="btn btn-play">Začít hrát</a>
       </div>
     </div>
   </body>
