Přidání souborů, stáhnutí obrázků

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           class="btn btn-rules"
           >Pravidla</a
         >
-        <a href="index.html" class="btn btn-play">Začít hrát</a>
+        <a href="hra.html" class="btn btn-play">Začít hrát</a>
       </div>
     </div>
   </body>
