Propojení styly.css, přidán link na změnu nadpisu piškovrky, přidány tlačítka do nového souboru hra.html

--- a/hra.html
+++ b/hra.html
@@ -3,7 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styly.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="game">
+      <h1 class="title">Piškvorky</h1>
+      <div class="display-flex">
+        <div class="gamer">
+          <h2>HRAJE:</h2>
+          <img src="img/circle.svg" alt="kolečko" />
+        </div>
+
+        <div class="buttons-home-return">
+          <a href="index.html" class="home">
+            <img src="img/home.svg" alt="zpátky na úvodní stránku" />
+          </a>
+          <a href="hra.html" class="restart">
+            <img src="img/restart.svg" alt="znovunačtení stránky" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
