--- a/hra.html
+++ b/hra.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
       rel="stylesheet"
     />
+    <script type="module" src="hra.js"></script>
     <title>Document</title>
   </head>
   <body>
